# query_dictionary_learning

./: .gitignore  README.md  pyproject.toml
src/querylearning/: main.py
src/querylearning/configs/: k_llm_cifar100_alt.yaml  k_llm_cifar100_joint.yaml  k_llm_cifar100_vip.yaml  k_llm_cifar10_alt.yaml  k_llm_cifar10_joint.yaml  k_llm_cifar10_vip.yaml  k_llm_cub200_alt.yaml  k_llm_cub200_joint.yaml  k_llm_cub200_vip.yaml  k_llm_imagenet100_alt.yaml  k_llm_imagenet100_joint.yaml  k_llm_imagenet100_vip.yaml  k_llm_rival10_alt.yaml  k_llm_rival10_joint.yaml  k_llm_rival10_vip.yaml  k_llm_stanford_cars_alt.yaml  k_llm_stanford_cars_joint.yaml  k_llm_stanford_cars_vip.yaml  k_medoids_cifar100_alt.yaml  k_medoids_cifar100_joint.yaml  k_medoids_cifar100_vip.yaml  k_medoids_cifar10_alt.yaml  k_medoids_cifar10_joint.yaml  k_medoids_cifar10_vip.yaml  k_medoids_cub200_alt.yaml  k_medoids_cub200_joint.yaml  k_medoids_cub200_vip.yaml  k_medoids_imagenet100_alt.yaml  k_medoids_imagenet100_joint.yaml  k_medoids_imagenet100_vip.yaml  k_medoids_rival10_alt.yaml  k_medoids_rival10_joint.yaml  k_medoids_rival10_vip.yaml  k_medoids_stanford_cars_alt.yaml  k_medoids_stanford_cars_joint.yaml  k_medoids_stanford_cars_vip.yaml  k_random_cifar100_alt.yaml  k_random_cifar100_joint.yaml  k_random_cifar100_vip.yaml  k_random_cifar10_alt.yaml  (+14 more)
src/querylearning/modelling/: classifier.py  querier.py  queries.py
src/querylearning/pipeline/: bigfile.py  bigfile_builder.py  dataset.py  explainer.py  trainer.py
src/querylearning/querydict/: k_llm_cifar10.txt  k_llm_cifar100.txt  k_llm_cub200.txt  (+14 more)
(+13 files in other folders)
