[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "query_dictionary_learning"
description = "Code for the paper 'Learning Interpretable Queries for Explainable Image Classification via Information Pursuit'"
version = "0.1.0"
requires-python = ">=3.10.0"
readme = "README.md"
dependencies = [
    "seaborn>=0.13.2"
    "pandas>=2.3.2"
    "matplotlib>=3.9.2",
    "numpy>=1.26.3",
    "tqdm>=4.66.6",
    "wandb>=0.18.5",
    "openai-clip>=1.0.1"
]

